apps/opip/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opip-api
  labels:
    app.kubernetes.io/name: opip-api
    app.kubernetes.io/part-of: opip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opip-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
