apps/opip/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opip-frontend
  labels:
    app.kubernetes.io/name: opip-frontend
    app.kubernetes.io/part-of: opip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opip-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
